--- a/styles/global.css
+++ b/styles/global.css
@@ -5,8 +5,17 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body{
+  background-color: #fafbfb;
 }
 
 * {
   box-sizing: border-box;
 }
+
