--- a/styles/global.css
+++ b/styles/global.css
@@ -2,20 +2,16 @@
 
 html,
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
-body{
+body {
   background-color: #fafbfb;
 }
 
 * {
   box-sizing: border-box;
 }
-
