--- a/styles/global.css
+++ b/styles/global.css
@@ -15,3 +15,24 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.small-resolution {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  form {
+    display: none;
+  }
+  h2 {
+    width: auto;
+  }
+  .small-resolution {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 1.2rem;
+    margin-top: 10px;
+  }
+}
