--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
 
 html,
 body {
@@ -18,6 +18,10 @@ body {
 
 .small-resolution {
   display: none;
+}
+
+button {
+  font-weight: 500;
 }
 
 @media (max-width: 768px) {
